# serd

./: .gitignore  CMakeLists.txt  conanfile.py
cmake/: boilerplate_init.cmake  install_library.cmake
include/serd/: serd.h
src/: byte_source.c  byte_source.h  n3.c  reader.c  reader.h  serd_internal.h
